icon alignment fixes 	modified:   README.md 	modified:   bower.json 	modified:   elements/msc-profile-view/msc-profile-view.css 	modified:   elements/msc-profile-view/msc-profile-view.html 	modified:   elements/msc-profile-view/msc-profile-view.js 	modified:   elements/msc-subcomponents/msc-main-status/msc-main-status.css 	modified:   elements/msc-subcomponents/msc-main-status/msc-main-status.html 	modified:   package.json 	modified:   yarn.lock

--- a/elements/msc-profile-view/msc-profile-view.css
+++ b/elements/msc-profile-view/msc-profile-view.css
@@ -4,6 +4,11 @@
   display: table;
 }
 
+.flexbox_typ{
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 *{
   font-family: 'Lato', sans-serif;
 }
@@ -61,7 +66,6 @@ h2{
 }
 
 .account-address {
-  float: right;
   font-size: 14px;
   color: #b0b1b3;
   padding-left:10px;
@@ -71,16 +75,16 @@ h2{
   clear: both;
 }
 
-#th_acc{
-  width: 70%;
+.th_acc{
+  width: 60%;
 }
 
-#th_act{
-  width: 5%;
+.th_bal{
+  width: 28%;
 }
 
-#th_bal{
-  width: 25%;
+.th_act{
+  width: 12%;
 }
 
 #th_act, .account-act, #th_bal, .account-music, .account-btc, .account-usd{
@@ -97,25 +101,46 @@ table.border_bottom {
   color: #5d5f63;
   font-size: 12px;
   font-weight: 700;
+  width:100%;
 }
 
 table.acct th{
   text-align: left;
 }
 
-tr.border_bottom td {
-  border-bottom:1pt solid #5d5f63;
+table.border_bottom tr {
+  border-bottom:1pt solid #46494e !important;
+  display: flex;
+}
+
+table.border_bottom td{
+  padding: 20px;
+}
+
+p.account-address{
+  margin-left: 50px;
+}
+
+#footer_left{
+  position: absolute;
+  bottom: 30px;
 }
 
 #footer_left, #footer_right{
-  position: absolute;
-  bottom: 30px;
   color: #46494e;
   font-size: 11px;
 }
 
 #footer_right{
   background-color: #2b2e34;
+}
+
+#left_footer_buttons button{
+  padding: 0px;
+}
+
+#maximize img{
+  height: 23px;
 }
 
 #wallet_text{
@@ -132,36 +157,25 @@ tr.border_bottom td {
 }
 
 #bal_in_sel img{
-  width:24px; 
-  margin-left: 12px;
+  width:18px; 
+  margin-left: 6px;
 }
 
 #bal_in_txt{
   color: #5d5f63;
-  font-size: 12px;
+  font-size: 14px;
+  position: relative;
+  top: -3px;
 }
 
 #mid_right_col{
   clear: both;
-  width: inherit;
   height: auto;
   position: static;
 }
 
-#tableheader_acc{
-  width: 70%;
-}
-
-#tableheader_bal{
-  width: 25%;
-}
-
-#tableheader_act{
-  width: 5%;
-}
-
 #more_accounts{
-  margin-top:160px;
+  margin-top:80px;
   padding-bottom: 60px;
 }
 
@@ -185,10 +199,6 @@ h2.more_accounts{
 
 #left_footer_buttons button.active {
   background-color: #f2c455;
-}
-
-#footer_right{
-  text-align: center;
 }
 
 .title {
